--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,23 @@
 
 body {
   margin: 0;
-  font-family: "Source Sans Pro", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Source Sans Pro', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 a.active {
   border-bottom: 4px solid #8db55f;
+}
+
+input:focus {
+  border: none;
+  outline: 1px solid #8db55f;
 }
