--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,4 +20,15 @@
   color: #5e5e5c;
   font-weight: 700;
   padding: 5px;
+  position: relative;
+}
+.nav a span {
+  font-size: 16px;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  right: -28px;
+  background-color: #8db55f;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
