--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,3 +1,34 @@
 .product {
-  min-height: 200px;
+  padding: 10px;
+  min-width: 250px;
+}
+.product img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+.product h3,
+.price {
+  font-size: 16px;
+  font-weight: 700;
+}
+.product h3 {
+  margin-bottom: 20px;
+}
+.product div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price {
+  line-height: 100%;
+  margin: 0;
+}
+.cart-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 24px;
+  padding: 0;
+  color: #8db55f;
 }
