--- a/src/components/OrderForm/OrderForm.module.css
+++ b/src/components/OrderForm/OrderForm.module.css
@@ -1,3 +1,11 @@
 .form {
     padding: 10px;
 }
+.form h2 {
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(78, 77, 77);
+    margin-bottom: 15px;
+    text-align: center;
+    padding: 10px;
+}
