--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -7,3 +7,10 @@
   padding: 0 5px;
   overflow: auto;
 }
+.error {
+  flex-basis: 78%;
+  font-size: 40px;
+  font-weight: 900;
+  text-align: center;
+  color: #b4b0b0;
+}
