--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -1,7 +1,17 @@
 .item {
   padding: 10px;
+  margin-bottom: 15px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+.trash {
+  color: #8db55f;
+  font-size: 25px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 .item img {
   width: 50%;
@@ -33,6 +43,7 @@
   background-color: transparent;
   color: #8db55f;
   font-size: 20px;
+  cursor: pointer;
 }
 .item-form input {
   margin-bottom: 0;
