--- a/src/components/CartItems/CartItems.module.css
+++ b/src/components/CartItems/CartItems.module.css
@@ -2,3 +2,10 @@
   height: 100%;
   overflow: auto;
 }
+.error {
+    flex-basis: 78%;
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+    color: #b4b0b0;
+  }
