--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,6 +1,10 @@
 .product {
   padding: 10px;
   min-width: 250px;
+  min-height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .product img {
   width: 100%;
@@ -13,7 +17,7 @@
   font-weight: 700;
 }
 .product h3 {
-  margin-bottom: 20px;
+  margin-bottom: auto;
 }
 .product div {
   display: flex;
