--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,8 @@ input:focus {
   border: none;
   outline: 1px solid #8db55f;
 }
+
+input.error {
+  border: 1px solid #e01616;
+  outline: none;
+}
