--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -9,8 +9,8 @@
   color: #8db55f;
   font-size: 25px;
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  top: 15px;
+  left: 15px;
   cursor: pointer;
 }
 .item img {
