--- a/src/components/OrderForm/OrderForm.module.css
+++ b/src/components/OrderForm/OrderForm.module.css
@@ -1,11 +1,13 @@
 .form {
-    padding: 10px;
+  padding: 10px;
+  grid-row: 1 / span 2;
+  grid-column: 1;
 }
 .form h2 {
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(78, 77, 77);
-    margin-bottom: 15px;
-    text-align: center;
-    padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(78, 77, 77);
+  margin-bottom: 15px;
+  text-align: center;
+  padding: 10px;
 }
