--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,3 +31,19 @@
   padding: 5px 10px;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 650px) {
+  .nav {
+    flex-basis: 60%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .nav {
+    flex-basis: 70%;
+  }
+}
+@media screen and (max-width: 440px) {
+  .nav {
+    justify-content: space-around;
+  }
+}
