--- a/src/components/ShopList/ShopList.module.css
+++ b/src/components/ShopList/ShopList.module.css
@@ -9,3 +9,27 @@
 .shop-list {
   width: 100%;
 }
+
+@media screen and (max-width: 720px) {
+  .shops {
+    flex-basis: 30%;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .shops {
+    flex-basis: 40%;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .shops {
+    flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .shops {
+    flex-basis: 60%;
+  }
+}
