--- a/src/components/OrderForm/OrderForm.module.css
+++ b/src/components/OrderForm/OrderForm.module.css
@@ -3,11 +3,10 @@
   grid-row: 1 / span 2;
   grid-column: 1;
 }
-.form h2 {
-  font-size: 20px;
-  font-weight: bold;
-  color: rgb(78, 77, 77);
-  margin-bottom: 15px;
-  text-align: center;
-  padding: 10px;
+
+@media screen and (max-width: 840px) {
+  .form {
+    grid-row: 1;
+    grid-column: 1;
+  }
 }
